--- a/src/containers/dailyList/style.scss
+++ b/src/containers/dailyList/style.scss
@@ -24,9 +24,9 @@
 			a {
 				font-size: 14px;
 				display: block;
-				color: #5081ff;
+				color: #33b400;
 				&:hover {
-					color: #33b400;
+					opacity: 0.7;
 				}
 			}
 		}
