--- a/src/containers/myDailyList/style.scss
+++ b/src/containers/myDailyList/style.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
-.daily-list {
+.my-daily-list {
+	padding-left: 75px;
 	.daily-item {
 		display: -webkit-box;
 		margin-bottom: 15px;
