--- a/src/components/dailys/style.scss
+++ b/src/components/dailys/style.scss
@@ -7,17 +7,20 @@
 		&:last-child {
 			padding-bottom: 0;
 		}
-		> .icon-circle {
+		.icon-circle {
 			margin: 1px 5px 0 0;
 			width: 20px;
 			height: 20px;
 		}
-		> p {
+		.record {
 			-webkit-box-flex: 1;
 			display: block;
 			font-size: 14px;
 			line-height: 24px;
 			color: #586069;
+			&.empty {
+				color: #e5e5e5;
+			}
 		}
 		> .tools {
 			display: -webkit-box;
@@ -41,6 +44,23 @@
 				visibility: visible;
 				pointer-events: auto;
 			}
+		}
+		&.rewrite {
+			opacity: 1;
+			pointer-events: auto;
+			display: block;
+			.box {
+				display: -webkit-box;
+				padding-bottom: 10px;
+				margin-bottom: 10px;
+				border-bottom: 1px dashed #dee3e8;
+			}
+		}
+	}
+	&--rewrite {
+		li {
+			opacity: 0.2;
+			pointer-events: none;
 		}
 	}
 }
