--- a/src/components/toast/style.scss
+++ b/src/components/toast/style.scss
@@ -3,7 +3,7 @@
 .x-toast {
 	position: fixed;
 	left: 0;
-	top: 0;
+	top: 10px;
 	display: -webkit-box;
 	-webkit-box-pack: center;
 	-webkit-box-align: start;
@@ -13,37 +13,27 @@
 	background: rgba(0,0,0,0);
 	pointer-events: none;
 	&__inner {
-		background: rgba(0,0,0,0.7);
-		padding: 8px 12px;
+		background: rgba(255,255,255,0.9);
+		padding: 10px 16px;
 		border-radius: 3px;
-		opacity: 0;
 		-webkit-transform-origin: 50%;
+		box-shadow: 0 0 15px rgba(0,39,61,0.1);
+		border-top: none;
+		-webkit-transform: translate(0, -150%);
+		-webkit-transition: all 0.15s ease-out;
 		p {
-			color: #fff;
+			color: #ff6600;
 			font-size: 14px;
 		}
 	}
 	&--show {
 		.x-toast__inner {
-			-webkit-transform: scale(1,1);
-			opacity: 1;
-			-webkit-animation: "___x_toast_show" 0.2s ease-out;
-		}
-		@at-root {
-			@-webkit-keyframes "___x_toast_show" {
-				0% { -webkit-transform: scale(1.4,1.4); opacity: 0;}
-				75% { -webkit-transform: scale(0.95,0.95); opacity: 1;}
-				100% { -webkit-transform: scale(1,1); opacity: 1;}
-			}
+			-webkit-transform: translate(0, 0);
 		}
 	}
 	&--hide {
-		opacity: 0;
-		-webkit-transition: opacity 0.15s ease-out;
-		pointer-events: none;
 		.x-toast__inner {
-			-webkit-transform: scale(0.95,0.95);
-			-webkit-transition: all 0.15s ease-out;
+			-webkit-transform: translate(0, -150%);
 		}
 	}
 }
