--- a/src/containers/myDailyHeader/style.scss
+++ b/src/containers/myDailyHeader/style.scss
@@ -35,7 +35,6 @@
 	}
 	.grid {
 		position: relative;
-		margin-bottom: 10px;
 		.date {
 			position: absolute;
 			left: 0;
@@ -79,7 +78,7 @@
 		}
 		.bd {
 			position: relative;
-			padding: 0 8px 0 9px;
+			padding: 0 0 0 29px;
 		}
 		li {
 			-webkit-transform: scale(0.8);
@@ -114,15 +113,14 @@
 		display: -webkit-box;
 		-webkit-box-pack: end;
 		font-size: 12px;
-		margin-right: 4px;
 		i {
 			display: block;
-			width: 11px;
-			height: 11px;
-			margin: 0 2px;
+			width: 12px;
+			height: 12px;
+			margin-left: 4px;
 		}
 		p {
-			color: #586069;
+			color: #586069 + 40;
 			padding: 0 4px;
 		}
 	}
@@ -132,6 +130,7 @@
 		border: 1px solid #d4d9de + 10;
 		padding: 10px;
 		position: relative;
+		margin-top: 10px;
 		> h1 {
 			font-size: 16px;
 			line-height: 20px;
