--- a/src/containers/writerBox/style.scss
+++ b/src/containers/writerBox/style.scss
@@ -3,6 +3,7 @@
 .writer-box {
 	display: -webkit-box;
 	margin-bottom: 20px;
+	overflow: hidden;
 	.icon {
 		margin-right: 15px;
 		display: block;
@@ -16,13 +17,9 @@
 		-webkit-box-flex: 1;
 		padding: 15px;
 	}
-	.my-daily {
-		padding-bottom: 10px;
-		margin-bottom: 10px;
-		border-bottom: 1px dashed #dee3e8;
-	}
 	.newrecord {
-		// pointer-events: none;
-		// opacity: 0.3;
+		padding-top: 10px;
+		margin-top: 10px;
+		border-top: 1px dashed #dee3e8;
 	}
 }
