--- a/src/containers/header/style.scss
+++ b/src/containers/header/style.scss
@@ -5,9 +5,16 @@
 	border-bottom: 1px solid #d1d5da + 10;
 	background: #fff;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.07);
-	margin-bottom: 30px;
-	position: relative;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
 	z-index: 9;
+	-webkit-transform: translate(0, -110%);
+	-webkit-transition: all 0.2s ease-out;
+	&--visible {
+		-webkit-transform: translate(0, 0);
+	}
 	.inner {
 		width: 1040px;
 		margin: 0 auto;
