--- a/src/containers/userList/style.scss
+++ b/src/containers/userList/style.scss
@@ -17,4 +17,11 @@
 		margin: 0 14px 10px 0;
 		float: left;
 	}
+	.empty {
+		color: #ddd;
+		font-size: 12px;
+		text-align: center;
+		margin-bottom: 30px;
+		line-height: 30px;
+	}
 }
