--- a/src/containers/myDailyList/style.scss
+++ b/src/containers/myDailyList/style.scss
@@ -18,17 +18,9 @@
 			line-height: 20px;
 			margin-bottom: 8px;
 			time {
-				font-size: 18px;
-				margin-right: 10px;
-				font-weight: bold;
-			}
-			a {
-				font-size: 14px;
 				display: block;
-				color: #33b400;
-				&:hover {
-					opacity: 0.7;
-				}
+				font-size: 14px;
+				color: #8a929b;
 			}
 		}
 		
