--- a/src/containers/writerBox/style.scss
+++ b/src/containers/writerBox/style.scss
@@ -17,6 +17,12 @@
 		-webkit-box-flex: 1;
 		padding: 15px;
 	}
+	.empty {
+		line-height: 100px;
+		text-align: center;
+		font-size: 12px;
+		color: #ddd;
+	}
 	.newrecord {
 		padding-top: 10px;
 		margin-top: 10px;
