--- a/src/containers/header/style.scss
+++ b/src/containers/header/style.scss
@@ -77,6 +77,16 @@
 			padding: 5px 15px;
 			box-shadow: 0 5px 35px rgba(0,39,61,0.05);
 		}
+		.app-spin {
+			width: 40px;
+			height: 50px !important;
+			-webkit-transform: scale(0.7);
+		}
+		.empty {
+			font-size: 12px;
+			line-height: 50px;
+			color: #ddd;
+		}
 		.item {
 			display: -webkit-box;
 			-webkit-box-align: center;
@@ -84,6 +94,7 @@
 			border-bottom: 1px dashed #dee3e8;
 			font-size: 14px;
 			font-weight: bold;
+			color: #000;
 			span {
 				display: block;
 				font-weight: normal;
