--- a/src/containers/userDailyList/style.scss
+++ b/src/containers/userDailyList/style.scss
@@ -39,6 +39,14 @@
 	.daily-item {
 		display: -webkit-box;
 		margin-bottom: 15px;
+		&--empty {
+			padding-left: 75px;
+			margin-bottom: 15px;
+			line-height: 200px;
+			text-align: center;
+			font-size: 12px;
+			color: #ddd;
+		}
 	}
 	.header {
 		margin-right: 15px;
@@ -52,14 +60,16 @@
 			line-height: 20px;
 			margin-bottom: 8px;
 			time {
-				font-size: 18px;
-				margin-right: 10px;
-				font-weight: bold;
+				display: block;
+				font-size: 12px;
+				margin-left: 10px;
+				color: #8a929b;
 			}
 			a {
-				font-size: 14px;
+				font-size: 16px;
 				display: block;
-				color: #33b400;
+				color: #5081ff;
+				font-weight: bold;
 				&:hover {
 					opacity: 0.7;
 				}
