--- a/src/containers/writerBox/style.scss
+++ b/src/containers/writerBox/style.scss
@@ -17,6 +17,9 @@
 		-webkit-box-flex: 1;
 		padding: 15px;
 	}
+	.my-daily {
+		min-height: 100px;
+	}
 	.empty {
 		line-height: 100px;
 		text-align: center;
