--- a/src/containers/groupList/style.scss
+++ b/src/containers/groupList/style.scss
@@ -4,6 +4,7 @@
 	overflow: hidden;
 	padding-bottom: 10px;
 	position: relative;
+	margin-bottom: 15px;
 	> h1 {
 		padding: 15px 15px 0 15px;
 		font-size: 16px;
