--- a/src/containers/myDailyHeader/style.scss
+++ b/src/containers/myDailyHeader/style.scss
@@ -17,6 +17,7 @@
 				font-weight: normal;
 				padding-left: 5px;
 				color: #8a929b;
+				font-size: 14px;
 			}
 		}
 		i {
@@ -70,44 +71,56 @@
 			}
 		}
 		.hd {
-			padding-left: 6px;
-			display: -webkit-box;
-			-webkit-box-pack: justify;
+			margin-left: 29px;
+			position: relative;
 			color: #586069 + 50;
 			font-size: 12px;
-			margin-bottom: 8px;
+			height: 12px;
+			margin-bottom: 5px;
+			li {
+				position: absolute;
+				top: 0;
+				line-height: 12px;
+				background: #fff;
+				-webkit-transform: scale(0.8);
+			}
 		}
 		.bd {
 			position: relative;
-			padding: 0 0 0 29px;
+			display: -webkit-box;
+			margin-bottom: 10px;
 		}
-		li {
-			-webkit-transform: scale(0.8);
+		.aside {
+			width: 29px;
+			span {
+				display: block;
+				font-size: 12px;
+				line-height: 12px;
+				margin-bottom: 12px;
+				-webkit-transform: scale(0.8);
+				color: #586069 + 50;
+			}
 		}
 	}
 	.gridchart {
-		-webkit-box-flex: 1;
 		display: -webkit-box;
-		margin-bottom: 10px;
 		position: relative;
+		-webkit-box-flex: 1;
 		.col {
 			width: 100%;
-			-webkit-box-flex: 1;
 			pointer-events: none;
+			width: 12px;
 		}
 		i {
 			display: block;
-			width: 100%;
+			width: 12px;
+			height: 12px;
+			overflow: hidden;
 			background: #ebedf0;
 			border-right: 1px solid #fff;
 			border-bottom: 1px solid #fff;
 			overflow: hidden;
 			pointer-events: auto;
-			&:after {
-				content: "";
-				display: block;
-				margin-top: 100%;
-			}
 		}
 	}
 	.tips {
@@ -121,8 +134,9 @@
 			margin-left: 4px;
 		}
 		p {
-			color: #586069 + 40;
+			color: #586069 + 50;
 			padding: 0 4px;
+			-webkit-transform: scale(0.8);
 		}
 	}
 	.someday {
