--- a/src/containers/userDailyList/style.scss
+++ b/src/containers/userDailyList/style.scss
@@ -51,6 +51,9 @@
 	.header {
 		margin-right: 15px;
 	}
+	> .app-spin {
+		margin-left: 75px;
+	}
 	.daily-bd {
 		-webkit-box-flex: 1;
 		padding: 15px;
@@ -61,7 +64,7 @@
 			margin-bottom: 8px;
 			time {
 				display: block;
-				font-size: 12px;
+				font-size: 14px;
 				margin-left: 10px;
 				color: #8a929b;
 			}
