--- a/src/containers/userList/style.scss
+++ b/src/containers/userList/style.scss
@@ -1,7 +1,6 @@
 @charset "utf-8";
 
 .user-list {
-	margin-left: 75px;
 	padding: 15px 0 5px 15px;
 	> h1 {
 		font-size: 16px;
@@ -16,12 +15,15 @@
 	.header {
 		margin: 0 14px 10px 0;
 		float: left;
+		width: 48px;
+		height: 48px;
+		line-height: 48px;
 	}
 	.empty {
 		color: #ddd;
 		font-size: 12px;
 		text-align: center;
-		margin-bottom: 30px;
-		line-height: 30px;
+		margin-bottom: 20px;
+		line-height: 60px;
 	}
 }
