--- a/src/components/select/style.scss
+++ b/src/components/select/style.scss
@@ -2,9 +2,9 @@
 
 .app-select {
 	display: block;
-	height: 40px;
 	position: relative;
-	
+	width: 200px;
+
 	> p {
 		display: block;
 		border: 1px solid #d4d9de + 10;
@@ -12,14 +12,13 @@
 		font-size: 14px;
 		color: #586069;
 		background: #fff;
-		width: 200px;
 		padding: 0 10px;
 
-		height: 38px;
-		line-height: 38px;
+		height: 40px;
+		line-height: 40px;
 		overflow: hidden;
 		cursor: pointer;
-		&:hover {
+		&:hover, &.active {
 			border: 1px solid #5081ff !important;
 			box-shadow: 0 0 5px rgba(80,129,255,0.3);
 		}
@@ -27,19 +26,26 @@
 	&__popup {
 		position: absolute;
 		left: 0;
-		top: 40px;
+		top: 42px;
 		width: 100%;
 		box-shadow: 0 5px 35px rgba(0,39,61,0.05);
 		border: 1px solid #d4d9de + 10;
 		border-radius: 3px;
 		z-index: 999;
 		background: #fff;
+		height: 5 * 40px;
+		overflow: auto;
+		color: #586069 + 30;
 		li {
 			padding: 10px;
 			line-height: 20px;
 			cursor: pointer;
+			font-size: 14px;
 			&:hover {
 				background: #f7f9fc;
+			}
+			&.active {
+				background: #f7f9fc - 10;
 			}
 		}
 	}
