--- a/src/components/input/style.scss
+++ b/src/components/input/style.scss
@@ -1,15 +1,15 @@
 @charset "utf-8";
 
-input.app-input {
+.app-input {
 	display: block;
 	border: 1px solid #d4d9de + 10 !important;
 	padding: 5px 10px;
 	height: 40px;
-	line-height: 40px;
 	border-radius: 3px !important;
 	font-size: 14px;
 	color: #586069;
 	background: #fff !important;
+	outline: none;
 	&::-webkit-input-placeholder {
 		color: #ddd;
 	}
@@ -20,4 +20,9 @@ input.app-input {
 	&--disabled {
 		color: #586069 + 50;
 	}
+}
+
+textarea.app-input {
+	height: 80px;
+	padding: 10px;
 }
