--- a/src/containers/myDailyList/style.scss
+++ b/src/containers/myDailyList/style.scss
@@ -5,6 +5,14 @@
 	.daily-item {
 		display: -webkit-box;
 		margin-bottom: 15px;
+		&--empty {
+			padding-left: 75px;
+			margin-bottom: 15px;
+			line-height: 200px;
+			text-align: center;
+			font-size: 12px;
+			color: #ddd;
+		}
 	}
 	.header {
 		margin-right: 15px;
