--- a/src/containers/userDailyList/style.scss
+++ b/src/containers/userDailyList/style.scss
@@ -5,19 +5,15 @@
 		margin-left: 75px;
 		margin-bottom: 15px;
 		display: -webkit-box;
-		overflow: hidden;
+		position: relative;
 		a {
-			display: block;
+			display: -webkit-box;
+			-webkit-box-align: center;
+			-webkit-box-pack: center;
 			width: 80px;
 			font-size: 14px;
 			height: 50px;
-			line-height: 50px;
 			color: #8a929b;
-			text-align: center;
-			// border-right: 1px solid #dee3e8;
-			// &:last-child {
-			// 	border-right: none;
-			// }
 			&:hover {
 				color: #5081ff;
 			}
@@ -28,11 +24,62 @@
 			height: 50px;
 			line-height: 50px;
 			color: #5081ff;
-			// background: #f7f9fc;
 			font-weight: bold;
 			font-size: 14px;
 			text-align: center;
-			// border-right: 1px solid #dee3e8;
+		}
+		.more {
+			position: absolute;
+			right: 0;
+			top: 0;
+			sub {
+				display: block;
+				margin-left: 5px;
+				width: 10px;
+				height: 10px;
+				background-image: url('../../assets/imgs/icon-down.png');
+				background-repeat: no-repeat;
+				background-position: center center;
+				background-size: 100% auto;
+			}
+		}
+		.popup {
+			position: absolute;
+			right: 0;
+			top: 42px;
+			width: 347px;
+			box-shadow: 0 5px 35px rgba(0,39,61,0.05);
+			border: 1px solid #d4d9de + 10;
+			border-radius: 3px;
+			z-index: 999;
+			background: #fff;
+			color: #586069 + 30;
+			padding: 10px;
+			ul {
+				overflow: hidden;
+			}
+			li {
+				float: left;
+				&.active a {
+					color: #6495ff;
+				}
+			}
+			a {
+				display: block;
+				width: 65px;
+				height: 40px;
+				text-align: center;
+				line-height: 40px;
+				color: #8a929b;
+				font-size: 12px;
+				cursor: pointer;
+				span {
+					opacity: 0.5;
+				}
+				&:hover {
+					color: #586069;
+				}
+			}
 		}
 	}
 	.daily-item {
