--- a/src/components/input/style.scss
+++ b/src/components/input/style.scss
@@ -10,6 +10,7 @@
 	color: #586069;
 	background: #fff !important;
 	outline: none;
+	resize: none;
 	&::-webkit-input-placeholder {
 		color: #ddd;
 	}
