--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -29,6 +29,14 @@
 		pointer-events: none;
 	}
 
+	&--danger {
+		border: 1px solid rgb(246,130,59);
+		background: rgb(246,150,59);
+		&:hover {
+			background: rgb(246,150,59) - 10;
+		}
+	}
+
 	.x-loading__spin {
 		width: 14px;
 		height: 14px;
