--- a/src/containers/userList/style.scss
+++ b/src/containers/userList/style.scss
@@ -3,15 +3,14 @@
 .user-list {
 	padding: 15px 0 5px 15px;
 	position: relative;
+	margin-bottom: 15px;
 	> h1 {
 		font-size: 16px;
 		line-height: 20px;
 		display: block;
 		margin-bottom: 15px;
 		clear: both;
-		span {
-			font-weight: bold;
-		}
+		font-weight: bold;
 	}
 	.header {
 		margin: 0 14px 10px 0;
