--- a/src/containers/header/style.scss
+++ b/src/containers/header/style.scss
@@ -24,6 +24,7 @@
 		position: relative;
 	}
 	.logo {
+		display: block;
 		width: 195px;
 		height: 27px;
 		background: url('../../assets/imgs/logo.png');
