添加谁没写日报功能

--- a/src/containers/userDailyList/style.scss
+++ b/src/containers/userDailyList/style.scss
@@ -84,6 +84,16 @@
 			}
 		}
 	}
+	.tips-bar {
+		background: #fdffdc;
+		padding: 10px;
+		margin-left: 75px;
+		margin-bottom: 15px;
+		color: #ffb03a;
+		border-radius: 3px;
+		font-size: 14px;
+		line-height: 1.5;
+	}
 	.project-bar {
 		padding: 10px;
 		border-top: 1px dashed #dee3e8;
