--- a/src/components/select/style.scss
+++ b/src/components/select/style.scss
@@ -18,7 +18,7 @@
     padding: 5px 30px 5px 10px;
     position: relative;
     sup {
-      color: #a8b0b9;
+      color: #ddd;
     }
   }
   &--multi {
@@ -33,7 +33,7 @@
     flex-wrap: wrap;
     align-items: center;
     padding: 5px 30px 0 5px;
-    min-height: 33px;
+    min-height: 38px;
     position: relative;
     .bg {
       position: absolute;
@@ -77,8 +77,8 @@
       }
     }
     > sup {
-      color: #a8b0b9;
-      padding: 0 5px;
+      color: #ddd;
+      padding: 0 5px 5px 5px;
     }
   }
   .wb-select__down {
