--- a/src/components/projectItem/style.scss
+++ b/src/components/projectItem/style.scss
@@ -1,5 +1,5 @@
 
-.project-item {
+.wb-project-item {
   width: 340px;
   height: 500px;
   border-radius: 4px;
@@ -9,8 +9,9 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  position: relative;
   > h2 {
-    padding: 10px 10px 0 10px;
+    padding: 10px 80px 0 10px;
     color: #222;
     font-size: 16px;
     font-weight: bold;
@@ -32,6 +33,23 @@
       &.weight-3 {
         background: #ff3300;
       }
+    }
+  }
+  .progress {
+    width: 60px;
+    height: 4px;
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    background: #5081ff30;
+    border-radius: 3px;
+    overflow: hidden;
+    span {
+      display: block;
+      width: 50%;
+      height: 100%;
+      border-radius: 3px;
+      background: #5081ff;
     }
   }
   .departments {
@@ -81,6 +99,7 @@
       .item {
         border-bottom: 1px solid #dee3e8 + 15;
         padding: 10px;
+        position: relative;
         &:hover {
           background: #f7f9fc;
           .info a {
@@ -94,6 +113,7 @@
           flex: 1;
           line-height: 20px;
           margin-bottom: 2px;
+          padding-right: 50px;
         }
         h6:before {
           content: '';
@@ -105,6 +125,14 @@
           top: -1px;
           background: #c7b3ff;
           border-radius: 50%;
+        }
+        .progress {
+          width: 40px;
+          top: 19px;
+          background: #33b40030;
+          span {
+            background: #33b400;
+          }
         }
         p {
           display: block;
@@ -145,7 +173,7 @@
       line-height: 100px;
     }
   }
-  > footer {
+  > .footer {
     border-top: 1px solid #dee3e8;
     background: #f7f9fc;
     padding: 0 10px;
