--- a/src/views/project/style.scss
+++ b/src/views/project/style.scss
@@ -31,21 +31,58 @@
 
 .view-project__mission-bar {
   .inner {
-    width: 380px;
+    width: 420px;
     height: 100%;
-    padding: 20px;
-    > .mission-item {
-      margin-bottom: 15px;
+    padding: 15px;
+    > .wb-mission-item {
+      margin-bottom: 10px;
+      width: 100%;
     }
-    > header {
-      display: flex;
-      align-items: center;
+    .header {
+      display: block;
       margin-bottom: 15px;
+      position: relative;
       h2 {
         font-size: 18px;
-        line-height: 20px;
+        line-height: 30px;
         font-weight: 700;
-        flex: 1;
+        padding-right: 40px;
+        span {
+          display: block;
+          float: left;
+          border-radius: 50px;
+          margin: 5px 5px 0 0;
+          color: #fff;
+          font-size: 12px;
+          font-weight: normal;
+          line-height: 1;
+          padding: 4px 6px;
+          &.weight-2 {
+            background: #ff9900;
+          }
+          &.weight-3 {
+            background: #ff3300;
+          }
+        }
+      }
+      a {
+        position: absolute;
+        right: 0;
+        top: 0;
+        display: block;
+        width: 30px;
+        height: 30px;
+        overflow: hidden;
+        &:hover svg {
+          fill: #5081ff;
+        }
+      }
+      svg {
+        display: block;
+        width: 14px;
+        height: 14px;
+        margin: 8px 0 8px 16px;
+        fill: #586069;
       }
     }
   }
