--- a/src/containers/asideUserList/style.scss
+++ b/src/containers/asideUserList/style.scss
@@ -3,7 +3,7 @@
 .aside-user-list {
   .user-list {
     padding: 15px 0 5px 15px;
-    .user-header {
+    .wb-user-header {
       margin: 0 14px 10px 0;
       float: left;
       width: 48px;
