--- a/src/components/projectItem/style.scss
+++ b/src/components/projectItem/style.scss
@@ -100,6 +100,7 @@
         border-bottom: 1px solid #dee3e8 + 15;
         padding: 10px;
         position: relative;
+        cursor: pointer;
         &:hover {
           background: #f7f9fc;
           .info a {
@@ -173,19 +174,119 @@
       line-height: 100px;
     }
   }
+  > .description {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 888;
+    &.ani-in {
+      .desc-bg {
+        opacity: 1;
+      }
+      .desc-inner {
+        transform: translate(0, 0);
+      }
+    }
+    .desc-bg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(255, 255, 255, 0.8);
+      opacity: 0;
+      transition: opacity 0.2s ease-out;
+    }
+    .desc-inner {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      right: 0;
+      bottom: 0;
+      background: #fff;
+      padding: 10px;
+      box-shadow: 0 0 15px rgba(0, 39, 61, 0.1);
+      border-top: 1px solid #dee3e8;
+      z-index: 9;
+      transform: translate(0, 100%);
+      transition: transform 0.2s ease-out;
+      > h3 {
+        font-size: 14px;
+        color: #222;
+        border-bottom: 1px dashed #f7f9fc - 8;
+        line-height: 1.5;
+        font-weight: bold;
+        padding-bottom: 5px;
+        margin-bottom: 10px;
+      }
+      > p {
+        font-size: 14px;
+        color: #586069;
+        line-height: 1.5;
+        text-align: justify;
+        &.empty {
+          color: #d0d8e1;
+          text-align: center;
+          line-height: 100px;
+          font-size: 12px;
+        }
+      }
+      > a {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        width: 19px;
+        height: 19px;
+        display: block;
+        &:hover svg {
+          fill: #5081ff;
+        }
+        svg {
+          display: block;
+          width: 11px;
+          height: 11px;
+          fill: #a8b0b9;
+          margin: 4px;
+        }
+      }
+    }
+  }
   > .footer {
+    position: relative;
+    z-index: 999;
     border-top: 1px solid #dee3e8;
     background: #f7f9fc;
     padding: 0 10px;
     height: 36px;
-    line-height: 36px;
-    color: #a8b0b9;
-    font-size: 12px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    span {
-      color: #8a929b;
-      padding-right: 4px;
+    p {
+      line-height: 36px;
+      color: #a8b0b9;
+      font-size: 12px;
+      float: left;
+      span {
+        color: #8a929b;
+        padding-right: 4px;
+      }
+    }
+    a {
+      float: right;
+      width: 20px;
+      height: 20px;
+      margin-top: 7px;
+      svg {
+        display: block;
+        width: 16px;
+        height: 16px;
+        margin: 2px;
+        fill: #8a929b;
+      }
+      &:hover svg {
+        fill: #5081ff;
+      }
     }
   }
 }
