--- a/src/components/homeMissionItem/style.scss
+++ b/src/components/homeMissionItem/style.scss
@@ -38,7 +38,7 @@
     color: #a8b0b9;
     font-size: 12px;
     line-height: 1.5;
-    border-bottom: 1px solid #f7f9fc - 8;
+    border-bottom: 1px solid #dee3e8 + 15;
   }
   > .description {
     padding: 0 10px;
