--- a/src/components/userHeader/style.scss
+++ b/src/components/userHeader/style.scss
@@ -32,22 +32,22 @@
   }
 }
 
-div.wb-user-header.color-0 {
+.wb-user-header.color-0.colorful {
   background: #feb5cc;
 }
-div.wb-user-header.color-1 {
+.wb-user-header.color-1.colorful {
   background: #c7b3ff;
 }
-div.wb-user-header.color-2 {
+.wb-user-header.color-2.colorful {
   background: #68e4b1;
 }
-div.wb-user-header.color-3 {
+.wb-user-header.color-3.colorful {
   background: #a8e26f;
 }
-div.wb-user-header.color-4 {
+.wb-user-header.color-4.colorful {
   background: #82c6f1;
 }
-div.wb-user-header.color-5 {
+.wb-user-header.color-5.colorful {
   background: #f8b981;
 }
 
