--- a/src/views/console/style.scss
+++ b/src/views/console/style.scss
@@ -6,7 +6,7 @@
     align-items: flex-start;
   }
   .console-aside {
-    width: 240px;
+    width: 180px;
     background: #fff;
     border: 1px solid #dee3e8;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
@@ -74,5 +74,18 @@
     border-radius: 4px;
     padding: 15px;
     min-height: 500px;
+    min-width: 800px;
+  }
+  .console-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    h1 {
+      flex: 1;
+      font-size: 20px;
+      line-height: 1.5;
+      color: #222;
+      font-weight: bold;
+    }
   }
 }
