--- a/src/views/consoleProject/style.scss
+++ b/src/views/consoleProject/style.scss
@@ -29,7 +29,7 @@
   }
   .progress-text {
     font-size: 12px;
-    color: #a8b0b9;
+    color: #586069;
     line-height: 1;
     position: relative;
     display: block;
