--- a/src/views/login/style.scss
+++ b/src/views/login/style.scss
@@ -1,5 +1,13 @@
 @charset "utf-8";
 
 .view-login {
-
+  padding: 40px;
+  form {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #a8b0b9;
+  }
+  .wb-input {
+    margin-bottom: 15px;
+  }
 }
