--- a/src/components/dailyItem/style.scss
+++ b/src/components/dailyItem/style.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.daily-item {
+.wb-daily-item {
   border: 1px solid #dee3e8;
   background: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
@@ -15,35 +15,66 @@
     margin-bottom: 8px;
     color: #8a929b;
     a {
-      font-size: 16px;
+      font-size: 14px;
       display: block;
       color: #5081ff;
-      font-weight: 700;
-      margin-right: 10px;
+      font-weight: bold;
+      margin-right: 5px;
     }
     time {
       display: block;
       margin-left: 10px;
     }
   }
-  > ul {
-    li {
+
+  .daily-list {
+    .item {
       margin-bottom: 10px;
+      padding-bottom: 10px;
+      border-bottom: 1px dashed #f7f9fc - 20;
       &:last-child {
         margin-bottom: 0;
+        padding-bottom: 0;
+        border-bottom: none;
+      }
+      .mission {
+        font-size: 14px;
+        margin-bottom: 5px;
+        span {
+          display: block;
+          float: left;
+          width: 14px;
+          height: 14px;
+          margin: 3px 5px 0 0;
+          background: #f7f9fc - 5;
+          border-radius: 50%;
+          overflow: hidden;
+          &:after {
+            content: '';
+            display: block;
+            width: 7px;
+            height: 7px;
+            background: #5081ff;
+            margin-left: 7px;
+          }
+        }
+        strong {
+          display: block;
+          float: left;
+          line-height: 20px;
+          color: #ff9900;
+        }
+      }
+      > p {
+        color: #586069;
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 5px;
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
-    strong {
-      display: inline-block;
-      color: #eb7350;
-      line-height: 24px;
-      margin-right: 4px;
-    }
-    p {
-      display: block;
-      font-size: 14px;
-      line-height: 24px;
-      color: #586069;
-    }
   }
+
 }
