--- a/src/components/myDailyWriter/style.scss
+++ b/src/components/myDailyWriter/style.scss
@@ -1,66 +1,134 @@
 @charset "utf-8";
 
-.my-daily-writer {
+.wb-daily-writer {
   border: 1px solid #dee3e8;
   background: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
   border-radius: 4px;
   margin-bottom: 15px;
-  padding: 15px;
-  .daily-writer-box {
-    padding-top: 10px;
-    border-top: 1px dashed #dee3e8;
-  }
-  .writer-tools {
-    padding-top: 10px;
-    overflow: hidden;
-  }
-  .send-button {
-    float: right;
-  }
-  .my-daily-list {
-    li {
-      display: flex;
-      align-items: center;
+  position: relative;
+
+  .daily-list {
+    padding: 15px;
+    border-bottom: 1px solid #f7f9fc - 10;
+    .item {
+      margin-bottom: 10px;
       padding-bottom: 10px;
-      .progress {
-        display: none;
+      border-bottom: 1px dashed #f7f9fc - 20;
+      &:last-child {
+        margin-bottom: 0;
+        padding-bottom: 0;
+        border-bottom: none;
       }
-      .record {
-        flex: 1;
-        display: block;
+      .mission {
         font-size: 14px;
-        line-height: 24px;
-        color: #586069;
-        strong {
-          display: inline-block;
-          color: #eb7350;
-          line-height: 24px;
-          margin-right: 4px;
-        }
-      }
-      .tools {
-        height: 24px;
-        line-height: 24px;
-        visibility: hidden;
-        pointer-events: none;
-        display: flex;
-        align-items: center;
-        a {
+        margin-bottom: 5px;
+        span {
           display: block;
-          margin-left: 10px;
-          font-size: 12px;
-          color: #8a929b;
-          cursor: pointer;
-          &:hover {
-            opacity: 0.7;
+          float: left;
+          width: 14px;
+          height: 14px;
+          margin: 3px 5px 0 0;
+          background: #f7f9fc - 5;
+          border-radius: 50%;
+          overflow: hidden;
+          &:after {
+            content: '';
+            display: block;
+            width: 7px;
+            height: 7px;
+            background: #5081ff;
+            margin-left: 7px;
           }
         }
+        strong {
+          display: block;
+          float: left;
+          line-height: 20px;
+          color: #ff9900;
+        }
       }
-      &:hover .tools {
-        visibility: visible;
-        pointer-events: auto;
+      > p {
+        color: #586069;
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 5px;
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
   }
+
+  .writer-box {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    padding: 15px;
+  }
+
+  .writer-input {
+    margin-bottom: 10px;
+  }
+
+  .tools {
+    .missions {
+      float: left;
+      margin-right: 10px;
+    }
+    .progress {
+      width: 130px;
+      max-width: none;
+      float: left;
+      .wb-select__value {
+        p {
+          width: 100%;
+          font-size: 12px;
+          line-height: 1;
+          text-align: center;
+          span {
+            color: #8a929b;
+            padding-right: 5px;
+          }
+        }
+      }
+      ul {
+        padding: 5px;
+        overflow: hidden;
+        max-height: none;
+        width: 312px;
+      }
+      li {
+        float: left;
+        padding: 5px;
+        a {
+          display: block;
+          width: 50px;
+          height: 50px;
+          background: #f7f9fc;
+          border-radius: 50%;
+          text-align: center;
+          line-height: 50px;
+          color: #8a929b;
+          font-size: 12px;
+          padding: 0;
+          cursor: pointer;
+          &:hover {
+            background: #f7f9fc - 5;
+          }
+          svg {
+            display: none;
+          }
+          &.wb-select__list-active {
+            background: #5081ff;
+            color: #fff;
+          }
+        }
+      }
+    }
+    .send-button {
+      float: right;
+    }
+  }
+
+
 }
