--- a/src/containers/asideUserList/style.scss
+++ b/src/containers/asideUserList/style.scss
@@ -1,14 +1,13 @@
 @charset "utf-8";
 
-.aside-user-list {
-  .user-list {
+.wb-aside-user-list {
+  > .list {
     padding: 15px 0 5px 15px;
     .wb-user-header {
       margin: 0 14px 10px 0;
       float: left;
       width: 48px;
       height: 48px;
-      line-height: 48px;
     }
   }
   .empty {
