--- a/src/containers/mainDailyList/style.scss
+++ b/src/containers/mainDailyList/style.scss
@@ -1,5 +1,16 @@
 @charset "utf-8";
 
-.main-daily-list {
-
+.wb-main-daily-list {
+  > .daily-item {
+    .wb-user-header {
+      float: left;
+      width: 60px;
+      height: 60px;
+      margin-right: 15px;
+    }
+    .wb-daily-item {
+      float: left;
+      width: 735px;
+    }
+  }
 }
