--- a/src/views/wrapper/style.scss
+++ b/src/views/wrapper/style.scss
@@ -88,29 +88,9 @@ body {
   }
 }
 
-.wb-full {
-  border-bottom: 1px solid #dee3e8;
-  background: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
-  margin-bottom: 20px;
-  &__inner {
-    padding: 20px 0;
-    width: 1130px;
-    margin: 0 auto;
-  }
-}
-
 .wb-body {
-  display: flex;
   width: 1130px;
   margin: 0 auto;
-  &__main {
-    width: 800px;
-    margin-right: 15px;
-  }
-  &__aside {
-    flex: 1;
-  }
 }
 
 .wb-footer {
@@ -119,4 +99,10 @@ body {
   color: #a8b0b9;
   font-size: 12px;
   padding: 30px 0;
+}
+
+.wb-app-console {
+  .wb-body {
+    width: 1300px
+  }
 }
