--- a/src/components/userHeader/style.scss
+++ b/src/components/userHeader/style.scss
@@ -70,6 +70,9 @@
 .wb-user-header.color-5 {
   background: #f8b981;
 }
+.wb-user-header.gray {
+  background: #d0d8e1;
+}
 
 a.wb-user-header.color-0:hover {
   background: #feb5cc;
