--- a/src/components/missionItem/style.scss
+++ b/src/components/missionItem/style.scss
@@ -1,7 +1,7 @@
 
 .wb-mission-item {
   position: relative;
-  width: 340px;
+  width: 367px;
   // height: 140px;
   border-radius: 4px;
   border: 1px solid #dee3e8;
@@ -13,7 +13,7 @@
     font-size: 16px;
     font-weight: bold;
     line-height: 1.5;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     span {
       display: block;
       float: left;
@@ -32,22 +32,6 @@
       }
     }
   }
-  > h3 {
-    padding: 0 10px 5px 10px;
-    margin-bottom: 10px;
-    color: #a8b0b9;
-    font-size: 12px;
-    line-height: 1.5;
-    border-bottom: 1px solid #dee3e8 + 15;
-  }
-  > .description {
-    padding: 0 10px;
-    margin-bottom: 10px;
-    color: #586069;
-    font-size: 14px;
-    line-height: 1.5;
-    text-align: justify;
-  }
   > .progress {
     width: 60px;
     height: 4px;
@@ -65,13 +49,13 @@
       background: #33b400;
     }
   }
-  > .footer {
-    border-top: 1px solid #dee3e8;
-    background: #f7f9fc;
+  > footer {
     padding: 0 10px;
+    overflow: hidden;
+    border-top: 1px solid #dee3e8 + 15;
+    //background: #f7f9fc;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    overflow: hidden;
     p {
       float: left;
       color: #a8b0b9;
