--- a/src/containers/mainDailyList/style.scss
+++ b/src/containers/mainDailyList/style.scss
@@ -1,5 +1,14 @@
 @charset "utf-8";
 
-.main-daily-list {
-
+.wb-main-daily-list {
+  > .row {
+    .wb-user-header {
+      float: left;
+      margin-right: 10px;
+    }
+    .wb-daily-item {
+      float: left;
+      width: 740px;
+    }
+  }
 }
